--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node": ">=18.17.0"
   },
   "dependencies": {
-    "ethers": "^6.13.1"
+    "ethers": "^6.13.1",
+    "prettier": "^3.5.3"
   }
 }
